syntax = "proto3";

package service;

import "status_response.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


option java_package = "ar.edu.itba.pod.grpc";
option java_outer_classname = "AirportAdministrationModel";
option java_multiple_files = true;

service AirportAdminService {
  rpc AddSector(google.protobuf.StringValue) returns (StatusResponse);
  rpc AddCounters(AddCountersRequest) returns (StatusResponse);
  rpc AddExpectedPassengers(stream AddExpectedPassengersRequest) returns (stream StatusResponse);
}


message BookingData {
  string booking_code = 1;
  string flight_code = 2;
  string airline_name = 3;
}

message AddCountersRequest {
  string sector_name = 1;
  int32 counter_count = 2;
}

message AddExpectedPassengersRequest {
  BookingData passenger = 1;
}

